--- a/resources/scss/sections/_realizations.scss
+++ b/resources/scss/sections/_realizations.scss
@@ -28,9 +28,12 @@
     width: 100%;
     height: auto;
     transform: scale(1.15); // domyślnie przybliżone
-    transition:
-      transform 0.5s,
-      opacity 0.5s;
+
+    @media (prefers-reduced-motion: no-preference) {
+      transition:
+        transform 0.5s,
+        opacity 0.5s;
+    }
 
     &:hover {
       opacity: 1;
